--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main>
    <div class="container">
 
-    <p class="head">Advice</p> 
+    <p class="head">ADVICE </p> 
    <div class="quote"></div>
      <br>
      <svg width="290" height="16" id="divider2" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path fill="#4F5D74" d="M0 8h122v1H0zM173 8h122v1H173z"/><g transform="translate(138)" fill="#CEE3E9"><rect width="6" height="16" rx="3"/><rect x="14" width="6" height="16" rx="3"/></g></g></svg>
